--- a/pages/nlpearl_phones.mdx
+++ b/pages/nlpearl_phones.mdx
@@ -22,7 +22,7 @@ Currently, we offer phone numbers for purchase from the following country:
 
 - **United States (US)**
 
-If you require phone numbers from other country codes, please consider using our [Twilio Integration](/docs/twilio-integration) or [Custom VoIP Integration](/docs/custom-voip-integration) options.
+If you require phone numbers from other country codes, please consider using our [Twilio Integration](/pages/twilio_integration) or [Custom VoIP Integration](/pages/custom_voip) options.
 
 ### How to Purchase a Phone Number
 
@@ -45,8 +45,7 @@ Follow these steps to purchase a phone number from NLPearl.AI:
 	alt="API Call Setup"
 	style={{ 
 	borderRadius: '18px', 
-	width: '200px', // Adjust the width as needed
-	height: 'auto'  // Maintains aspect ratio
+
 	}}
 />
 <img
@@ -55,8 +54,7 @@ Follow these steps to purchase a phone number from NLPearl.AI:
 	alt="API Call Setup"
 	style={{ 
 	borderRadius: '18px', 
-	width: '200px', // Adjust the width as needed
-	height: 'auto'  // Maintains aspect ratio
+
 	}}
 />
 
