--- a/pages/languages.mdx
+++ b/pages/languages.mdx
@@ -63,6 +63,8 @@ Currently, NLPearl.AI supports the following languages and accents:
   - Accent: Hindi (hi-IN)
 - **Korean**:
   - Accent: Korean (ko-KR)
+- **Turkish**: (tr-TR)
+
 
 ### Important Notes
 
