--- a/pages/variables.mdx
+++ b/pages/variables.mdx
@@ -3,9 +3,12 @@ title: "Variables"
 description: "Learn how to effectively use variables in NLPearl.AI to enhance your Pearl's conversational flows."
 ---
 
-## Understanding Variables in NLPearl.AI
-
-When creating a Pearl in NLPearl.AI, one of the most powerful tools at your disposal is the use of **variables**. These variables allow you to dynamically personalize conversations, making them more engaging and contextually relevant. Understanding how to use these variables effectively is key to getting the most out of your AI-driven interactions.
+## Understanding Variables
+Variables are placeholders that you can fill with different information. 
+They allow you to insert specific details into your conversations, making them more personalized and engaging. 
+For example, you can greet a user by their first name or mention a product they are interested in. 
+By understanding and effectively using variables, you can create more dynamic and impactful AI-driven interactions.
+			
 			<img
 			  className="block dark:hidden"
 			  src="/images/exemples/variable.png"
@@ -26,6 +29,7 @@ When creating a Pearl in NLPearl.AI, one of the most powerful tools at your disp
 				height: 'auto'  // Maintains aspect ratio
 			  }}
 			/>
+			
 ### Built-In and Custom Variables
 
 NLPearl.AI comes with a set of built-in variables such as `firstName`, `lastName`, `agentName`, `companyName`, etc. However, you also have the flexibility to create **custom variables** to suit your specific needs.
